# talk-theme-roulette

./: .eslintignore  .eslintrc  .gitignore  .htmlhintrc  .prettierignore  .stylelintignore  .stylelintrc  README.md  package-lock.json  package.json  webpack.dev.js  webpack.prod.js
.github/: pull_request_template.md
.github/workflows/: deploy-to-preview.yml  release.yml
docs/: index.html
docs/assets/css/: common.css
docs/assets/js/: common.js
gulpfile.js/: audio.js  cleanDist.js  config.js  copyJs.js  css.js  ejs.js  html.js  htmlValidator.js  images.js  index.js  pug.js  revision.js  revisionReplace.js  scss.js  watch.js  webpackDev.js  webpackProd.js
previewer/: .gitignore  Dockerfile  confgen.py  config.ini  firebase.json  pyproject.toml
src/ejs/: index.ejs
src/ejs/components/: _body.ejs  _header.ejs  _heading.ejs
src/ejs/modules/: _head.ejs
src/js/: index.js
src/js/model/: _TalkThemeItemModel.js  _TalkThemeListModel.js
src/js/modules/: sample.js  talkThemeRoulette.js
src/scss/: common.scss
src/scss/components/: _body.scss  _header.scss  _heading.scss
src/scss/libs/: _reset.scss
src/scss/modules/: _foundation.scss  _functions.scss  _mixin.scss  _util.scss  _vars.scss
